--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
     }
 }
 
