--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.facebook.fresco:fresco:2.2.0'
+    implementation 'com.facebook.fresco:animated-gif:2.2.0'
 }
